--- a/notebooks/Granulosa_gene_trends_analysis.ipynb
+++ b/notebooks/Granulosa_gene_trends_analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "f07eca8f",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "4cb17587",
    "metadata": {},
    "outputs": [],
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "28be2bd7",
    "metadata": {},
    "outputs": [],
@@ -46,10 +46,173 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "2a7e5f81",
+   "execution_count": 5,
+   "id": "cde69056",
    "metadata": {},
    "outputs": [],
+   "source": [
+    "import pygam"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "4fb60f91",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.8.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(pygam.__version__)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "2a7e5f81",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-----\n",
+      "anndata     0.9.1\n",
+      "scanpy      1.9.3\n",
+      "-----\n",
+      "PIL                         9.1.1\n",
+      "anyio                       NA\n",
+      "asciitree                   NA\n",
+      "attr                        21.2.0\n",
+      "babel                       2.9.1\n",
+      "backcall                    0.2.0\n",
+      "brotli                      NA\n",
+      "certifi                     2022.12.07\n",
+      "cffi                        1.15.0\n",
+      "charset_normalizer          2.0.7\n",
+      "cloudpickle                 2.2.0\n",
+      "colorama                    0.4.6\n",
+      "cycler                      0.10.0\n",
+      "cython_runtime              NA\n",
+      "cytoolz                     0.12.1\n",
+      "dask                        2023.5.1\n",
+      "dateutil                    2.8.2\n",
+      "debugpy                     1.5.0\n",
+      "decorator                   5.1.1\n",
+      "defusedxml                  0.7.1\n",
+      "dill                        0.3.6\n",
+      "entrypoints                 0.3\n",
+      "fasteners                   0.18\n",
+      "fastjsonschema              NA\n",
+      "google                      NA\n",
+      "gseapy                      1.0.4\n",
+      "h5py                        3.7.0\n",
+      "idna                        3.3\n",
+      "igraph                      0.10.3\n",
+      "ipykernel                   6.4.1\n",
+      "ipython_genutils            0.2.0\n",
+      "ipywidgets                  7.7.1\n",
+      "jedi                        0.18.0\n",
+      "jinja2                      3.1.2\n",
+      "joblib                      1.3.0\n",
+      "json5                       NA\n",
+      "jsonschema                  4.1.0\n",
+      "jupyter_server              1.11.1\n",
+      "jupyterlab_server           2.8.2\n",
+      "kiwisolver                  1.4.3\n",
+      "leidenalg                   0.9.1\n",
+      "llvmlite                    0.40.0\n",
+      "lz4                         4.3.2\n",
+      "markupsafe                  2.0.1\n",
+      "matplotlib                  3.6.2\n",
+      "mpl_toolkits                NA\n",
+      "msgpack                     1.0.4\n",
+      "natsort                     8.2.0\n",
+      "nbclassic                   NA\n",
+      "nbformat                    5.1.3\n",
+      "numba                       0.57.0\n",
+      "numcodecs                   0.11.0\n",
+      "numexpr                     2.8.4\n",
+      "numpy                       1.24.3\n",
+      "packaging                   22.0\n",
+      "pandas                      1.5.2\n",
+      "parso                       0.8.2\n",
+      "pexpect                     4.8.0\n",
+      "pickleshare                 0.7.5\n",
+      "pkg_resources               NA\n",
+      "progressbar                 4.2.0\n",
+      "prometheus_client           NA\n",
+      "prompt_toolkit              3.0.20\n",
+      "psutil                      5.9.1\n",
+      "ptyprocess                  0.7.0\n",
+      "pvectorc                    NA\n",
+      "pyarrow                     12.0.0\n",
+      "pydev_ipython               NA\n",
+      "pydevconsole                NA\n",
+      "pydevd                      2.4.1\n",
+      "pydevd_concurrency_analyser NA\n",
+      "pydevd_file_utils           NA\n",
+      "pydevd_plugins              NA\n",
+      "pydevd_tracing              NA\n",
+      "pygam                       0.8.0\n",
+      "pygments                    2.14.0\n",
+      "pyparsing                   3.0.9\n",
+      "pyrsistent                  NA\n",
+      "python_utils                NA\n",
+      "pytz                        2021.1\n",
+      "requests                    2.26.0\n",
+      "scGAM                       NA\n",
+      "scipy                       1.11.0\n",
+      "seaborn                     0.12.2\n",
+      "send2trash                  NA\n",
+      "session_info                1.0.0\n",
+      "simplejson                  3.18.3\n",
+      "six                         1.16.0\n",
+      "sklearn                     1.2.0\n",
+      "sniffio                     1.2.0\n",
+      "socks                       1.7.1\n",
+      "sphinxcontrib               NA\n",
+      "statsmodels                 0.13.5\n",
+      "storemagic                  NA\n",
+      "tblib                       1.7.0\n",
+      "terminado                   0.12.1\n",
+      "texttable                   1.6.7\n",
+      "threadpoolctl               2.1.0\n",
+      "tlz                         0.12.1\n",
+      "toolz                       0.11.2\n",
+      "torch                       1.12.0+cu102\n",
+      "tornado                     6.1\n",
+      "tqdm                        4.64.1\n",
+      "traitlets                   5.1.0\n",
+      "typing_extensions           NA\n",
+      "urllib3                     1.26.7\n",
+      "wcwidth                     0.2.5\n",
+      "websocket                   1.2.1\n",
+      "yaml                        6.0\n",
+      "zarr                        2.13.3\n",
+      "zipp                        NA\n",
+      "zmq                         22.3.0\n",
+      "zoneinfo                    NA\n",
+      "-----\n",
+      "IPython             7.28.0\n",
+      "jupyter_client      7.0.6\n",
+      "jupyter_core        4.8.1\n",
+      "jupyterlab          3.2.0\n",
+      "notebook            6.4.4\n",
+      "-----\n",
+      "Python 3.9.13 (main, Aug 25 2022, 23:26:10) [GCC 11.2.0]\n",
+      "Linux-5.14.0-70.13.1.el9_0.x86_64-x86_64-with-glibc2.34\n",
+      "-----\n",
+      "Session information updated at 2023-08-22 03:26\n"
+     ]
+    }
+   ],
    "source": [
     "sc.settings.verbosity = 3  \n",
     "# verbosity: errors (0), warnings (1), info (2), hints (3)\n",
